[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/enemies/circleEnemy.png" type="Texture2D" id=1]
[ext_resource path="res://scripts/enemies/Large.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="Large" type="Area2D"]
position = Vector2( 509, 327 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )
spin = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 5, -57, 635, 490, 665, 442.5, 697, 392, 750, 271, 786, 113, 785, -70, 729, -285, 639, -447, 518, -576, 380, -678, 218, -747, 31, -775, -156, -763, -364, -687, -544, -564, -681, -397, -765, -195, -793, 0, -768, 224, -697, 398, -660, 455, -637.5, 487.5 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="turnrate" type="Timer" parent="."]
one_shot = true

[node name="waitTime" type="Timer" parent="."]
one_shot = true

[node name="stopTime" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Large_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Large_area_exited"]
[connection signal="timeout" from="waitTime" to="." method="_on_waitTime_timeout"]
[connection signal="timeout" from="stopTime" to="." method="_on_stopTime_timeout"]
